--- a/views/appointment.ejs
+++ b/views/appointment.ejs
@@ -54,6 +54,8 @@
                                             </div>
                                             <div class="card-body">
                                                 <div class="row mb-3">
+                                                    <input type="date" class="form-control" id="date"
+                                                    placeholder="Enter Date" name="date" value="<%= date %>" hidden>
                                                     <%for ( var i=0; i < slots.length;
                                                     i++ ){%>
                                                     <div class="col-2">
