--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -4,7 +4,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Drive Test</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
